tests/typing/fail/bool-arith-01.stderr
error: type mismatch: expected `int`, found `bool`
 --> tests/typing/fail/bool-arith-01.rs:6:19
  |
6 |         a : int = -false;
  |                   ^^^^^^
